public/stylesheets/header.css
.navbar .navbar-nav {
    display: inline-block;
    float: none;
}

.navbar .navbar-collapse {
    text-align: center;
}

.container-fluid {
    padding: 0px 0px 0px 0px;
}

.navbar-default .navbar-nav > li > a {
    color: #000;
    font-family: 'headerfont';
    font-size: 22px;
    letter-spacing: 2px;
}

ul > li > a {
    font-family: 'headerfont';
    font-size: 20px;
    margin-top: 2px;
}

.alignLinks {
    margin-left: 30px;
}

.navbar {
    background-color: transparent;
    border-color: transparent;
}

html,body,#particle-js {
    margin: 0;
    height: 100%;
    background-color: #eeeeee;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;


}

@font-face {
    font-family: 'headerfont';
    src: url('font/h3.ttf');
}


nav.navbar {
    -webkit-transition: all 0.5s ease;
    transition: all 0.5s ease;
    height: 60px;
    padding-top: 5px;
    background-color: transparent;
}

nav.navbar.shrink {
    -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
    background-color: #F5F5F5;
    opacity: 1;
}

.home-info {
    height: 800px;
}

hr {
    height: 1px;
    border: none;
    color: #a8a8a8;
    background-color: #a8a8a8;
    width: 60%;
    text-align: center;
    margin: 0 auto;
}

.fa-user-circle-o, .caret {
    color: #fff;
    font-size: 25px;
    line-height: 20px;
    -webkit-text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
    -moz-text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
    text-shadow: 0 0 10px #85929E;
}

i.fa.fa-user:hover {
    color: #fff;
    text-shadow: 0 0 10px #85929E;
}

i.fa.fa-user:active {
    background-color: rgb(125, 158, 192);
    text-shadow: 0 0 10px #85929E;
}

.navbar-nav > li > a {
    padding-top: 15px;
    padding-bottom: 11px;
}

.logo {
    position: absolute;
    left: 0;
    top: 0;
    margin-left: 2em;
    margin-top: 5px;
}

.container-fluid {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

#parallex-layer {
    position: fixed;
    width: 100%;
    height: 400px;
    background-color: rgb(125, 158, 192);
    opacity: 0.8;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
    background-color: rgb(125, 158, 192);
}

.fa-comments {
    color: #fff;
    text-shadow: 0 0 10px #85929E;
}

.fa-home, .fa-sign-in, .fa-wrench {
    color: #fff;
    font-size: 23px;
    text-shadow: 0 0 10px #85929E;
}

.fa-user-plus {
    color: #fff;
    font-size: 20px;
    margin-top: 3px;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
    background-color: transparent;
    color: #fff;
    font-weight: bolder;
    text-shadow: 0 0 10px #1076d4;
}

.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
    background: slategrey;
    color: #fff;
    font-weight: bold;
}

.dropdown-menu > li > a {
    display: block;
    clear: both;
    font-weight: 400;
    line-height: 1.42857143;
    color: #555;
}

.dropdown-menu > li > a {
    display: block;
    clear: both;
    font-weight: 400;
    line-height: 1.42857143;
    color: #555;
    padding: 5px 25px 10px 25px;
}

.navbar-nav > li > .dropdown-menu {
    padding: 0;
}

.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
    text-decoration: none;
}

.alignLinks {
    margin-left: 0px;
}

.loader {
    border: 2px solid #dcdcdc; /* Light grey */
    border-top: 2px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 30px;
    height: 30px;
    animation: spin 0.8s linear infinite;
    display: table;
    margin: 0 auto;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.pagination > li > a {
    position: relative;
    float: left;
    padding: 6px 12px;
    margin-left: -1px;
    line-height: 1.42857143;
    color: #337ab7;
    text-decoration: none;
    border: 1px solid #ddd;
    background-color: transparent;
}

.collapsing, .in {
    box-shadow: 0 4px 7px -5px #333, inset 0 7px 9px -7px rgba(0, 0, 0, 0.5);
}

.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
    background-color: #352C25;
    color: #fff;
}

canvas {
position: absolute;
  display: block;
  vertical-align: bottom;
}

